Latest fixes about group-landing page and new blurred backgrounds

--- a/client/landing/stylus/app.group.landing.styl
+++ b/client/landing/stylus/app.group.landing.styl
@@ -146,7 +146,7 @@ body
     position                absolute
     left                    50%
     margin-left             -400px
-    border-left             1px solid
+    border-left             1px solid rgba(0,0,0,.3)
 
   .group-name
     borderBox()
